try to fix btn not clickable on mobile

--- a/components/playing/right-column.module.scss
+++ b/components/playing/right-column.module.scss
@@ -1,6 +1,7 @@
 .container {
 	flex: 1;
 	justify-self: center;
+	z-index: 10;
 
 	@media screen and (max-width: 1100px) {
 		margin: 3rem 50%;
